# qtvncglplugin

./: CMakeLists.txt  README.md  dependencies.yaml
